--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:7644bfeb2b402fa92cff2c603fe3d91feff3e4a17ea15391afa108c6ba393b26"
+  "signature": "sha256:9401c8dda979702277613b841d9492fa6004655f71a21401c5ad2ad229c5f32e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -97,12 +97,12 @@
       "* The project will be graded by tecnical merits **and** presentation skills and clarity, this is the base grade \n",
       "* All team memebers receive the same base grade, \n",
       "* A bonus credit of +40% of your base grade will be given to the team conditioned on that:\n",
-      "  1. all four team members unanomously agree on every individuals' contributions to this project\n",
+      "  1. all four team members unanimously agree on every individuals' contributions to this project\n",
       "  2. they acknowledge that contribution in the final presentation. \n",
-      "* the bonus credit will be ditributed according to the unamomous percentage:\n",
+      "* the bonus credit will be ditributed according to the unanimous percentage:\n",
       "  * eg, if you received a score of 50 for your project, and you agreed that the four members' contributions are [50%, 30%, 10%, 10%], then the bonus credits will 20, and team members receives [10, 6, 2, 2] bonus credit, and the final score will be [60, 56, 52, 52] for the four members. \n",
       "  * if the team is made up with more or less people, it only affects the distribution but not the team's total bonus\n",
-      "* if team members cannot unanomously agree on the contribution percentages, then no one receives any bonus credit.\n",
+      "* if team members cannot unanimously agree on the contribution percentages, then no one receives any bonus credit.\n",
       "* this rule is designed to encourage participation, and reward those who do more work in the project\n",
       "  * it is suggested to divide the project into smaller pieces and agree on the contribution of each parts, then if a team member failed to deliver his/her part, then he/she has to relinquish the contribution to whoever picks up the work."
      ]
