--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:fae6395f64a602efb4e8388501ccedae2dd35ac7eb0c68f21c90d96464cc70ee"
+  "signature": "sha256:1ddc4f4b251a0289afe59d1a5b306e9ba87829675022ff8134c68597f472912a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -117,17 +117,28 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "The pricing function can be viewed as an interpolator."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
        "slide_type": "subslide"
       }
      },
      "source": [
-      "## Deltas and gammas\n",
+      "## Greeks\n",
       "\n",
       "The following terminologies are often used in practice\n",
-      "* Delta: 1st order derivative to market environments: $\\Delta = \\frac{\\partial v}{\\partial \\bs m}$\n",
+      "* Delta: 1st order derivative to market environments: $\\bs \\delta = \\frac{\\partial v}{\\partial \\bs m}$\n",
       " * Delta is a vector of size $m$\n",
-      " * Deltas are in the unit of dollar amount\n",
-      "* Gamma: 2nd order derivaties to market environments: $\\Gamma = \\frac{\\partial \\Delta}{\\partial \\bs m}$\n",
+      " * Deltas are in the unit of currency\n",
+      "* Gamma: 2nd order derivaties to market environments: $\\Gamma = \\frac{\\partial \\bs \\delta}{\\partial \\bs m}$\n",
       " * Gamma is a $m \\times m$ matrix that includes all cross gammas\n",
       "* Theta: $\\theta = \\frac{\\partial v}{\\partial t}$\n",
       "* Delta is also defined for certain common model parameters:\n",
@@ -317,9 +328,9 @@
       }
      },
      "source": [
-      "## Why quote spreads?\n",
+      "## Why spreads?\n",
       "\n",
-      "The market trade in prices but market participants like to quote spreads:\n",
+      "The market trades in prices but market participants communicate in spreads:\n",
       "\n",
       "| Instruments | Quotes |\n",
       "| :---: | :----: |\n",
@@ -330,7 +341,7 @@
       "\n",
       "**PV01** : the ratio of PV changes in bps over 1bps spread change\n",
       "\n",
-      "The advantages of quoting spread includes:\n",
+      "The advantages of spread over price includes:\n",
       "* free of the dirty/clean price ambiguity\n",
       "* comparable between different instruments\n",
       "* spreads are annualized, stable over time\n",
@@ -350,17 +361,14 @@
       "Given: \n",
       "\n",
       "* $v$ is the PV of the trade or portfolio to be hedged\n",
-      "* $\\bs b$ is a vector of benchmark instruments' PVs per unit notional\n",
-      "* $\\bs q$ is the vector of benchmark quotes, e.g. the quoted spreads for CDS, par swaps for rates etc\n",
+      "* $\\bs b$ is a vector of benchmark instruments' **PV**s \n",
+      "  * $\\bs b$ is usually in unit notional, by convention\n",
+      "* $\\bs q$ is the vector of benchmark quotes, usually in **spreads** \n",
+      "  * e.g. the quoted spreads for CDS, par swaps for rates etc\n",
       "\n",
-      "The replicating portfolio $\\bs h^T \\bs b$ is a portfolio that has identical first order risk to $v$: \n",
+      "The replicating portfolio $\\bs h^T \\bs b$ is a benchmark portfolio that has identical first order risk to $v$: \n",
       "\n",
-      "$$\\frac{\\partial v}{\\partial \\bs q}  = \\frac{\\partial (\\bs h^T \\bs b)}{\\partial \\bs q} = \\bs h^T  \\frac{\\partial \\bs b}{\\partial \\bs q} $$\n",
-      "\n",
-      "\n",
-      "When the $\\frac{\\partial \\bs b}{\\partial \\bs q}$ is invertable: \n",
-      "\n",
-      "$$\\bs h^T = \\frac{\\partial v}{\\partial \\bs q} (\\frac{\\partial \\bs b}{\\partial \\bs q})^{-1} $$"
+      "$$\\frac{\\partial v}{\\partial \\bs q}  = \\frac{\\partial (\\bs h^T \\bs b)}{\\partial \\bs q} = \\bs h^T  \\frac{\\partial \\bs b}{\\partial \\bs q} \\iff \\bs h^T = \\frac{\\partial v}{\\partial \\bs q} (\\frac{\\partial \\bs b}{\\partial \\bs q})^{-1} $$"
      ]
     },
     {
@@ -380,7 +388,11 @@
       "* $\\frac{\\partial v}{\\partial \\bs q}$ are the Deltas of the bespoke instrument\n",
       "* $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the Deltas of the benchmark instruments.\n",
       "\n",
-      "$-\\bs h^T \\bs b$ is the portfolio to netrualize all the first order risks, commonly referred as the hedging portfolio."
+      "$-\\bs h^T \\bs b$ is the portfolio to netrualize all the first order risks, commonly referred as the hedging portfolio.\n",
+      "\n",
+      "* this equation is the core of a market maker's operation\n",
+      "* we can trade illiquid instrument and hedge them using liquid benchmarks\n",
+      "* economy of scale, the hedge is only on the portfolio level"
      ]
     },
     {
@@ -417,13 +429,15 @@
      "source": [
       "## Diagonality\n",
       "\n",
-      "When computing benchmark Jacobian, we **must** re-bootstrap all dependent curves for any perturbations:\n",
-      "  * otherwise it is not a valid Jacobian in multi-variate calculus\n",
+      "The benchmark Jacobian is diagonal by consruction: \n",
+      "  * the relationship of $\\bs b$ and $\\bs q$ is one to one\n",
+      "    * the benchmark quotes are created to communicate benchmark prices\n",
+      "  * Jacobian $\\frac{\\partial v}{\\partial \\bs q}$ requires other elements of $\\bs q$ remain constant when perturbing one of them\n",
+      "    * this also holds other benchmark PV constant\n",
+      "\n",
+      "When computing benchmark Jacobian numerically, we **must** re-bootstrap all dependent curves for any perturbations:\n",
       "  * e.g., the CDS curve needs to be re-bootstrapped to reprice all benchmark instruments, even if we perturb IR\n",
       "  * survival probability may change, but PVs are kept the same for unperturbed tenors\n",
-      " \n",
-      "The benchmark Jacobian is therefore diagonal by consruction: \n",
-      "  * re-bootstraping ensures all off-diagonal elements are 0\n",
       "  * beware of the errors in curve building"
      ]
     },
@@ -751,7 +765,7 @@
       "  * the ambiguity is a reflection of incomplete market, not an arbitrage opportunity\n",
       "  \n",
       "Dynamic hedging in practice:\n",
-      "  * can't remove all risks, eg. jump-to-default risk\n",
+      "  * can't possibly remove all risks, eg. jump-to-default risk\n",
       "  * the cost of hedging over time won't add up to the PV of the instruments"
      ]
     },
@@ -785,11 +799,7 @@
       "| before |  par spread CDS | par spreads | $PV=0$, <br> no cash exchange | OTC |\n",
       "| after | standardised CDS with 100/500 cpn | quoted spreads, upfront | $PV \\ne 0$, <br> cash exchange | central clearing |\n",
       "\n",
-      "The quoted spread is a convention to convey upfront payment amount:\n",
-      "\n",
-      "* It is the flat hazard rate curve that reprices the standardised CDS\n",
-      "  * analogous to the yield to maturity or zero rate in rates\n",
-      "* the interest rate curve used for the conversion is published by ISDA"
+      "At its core, it is simply a change in the liquid benchmark instruments."
      ]
     },
     {
@@ -800,13 +810,13 @@
       }
      },
      "source": [
-      "## Hedging with bespoke instruments\n",
+      "## Real world hedging problem\n",
       "\n",
       "However, your bank's IT system hasn't been updated in time (it never does):\n",
       "\n",
-      "* Your end of day valuation batch still build CDS curves from the old-style par CDS instruments\n",
-      "* Your traders have to mark the par spreads instead of the standardised CDS quoted spreads\n",
-      "* Your banks's risks (deltas) are still computed with regard to par CDS, not the quoted spreads"
+      "* Your end of day valuation still builds CDS curves from the par CDS spread\n",
+      "* Your traders have to continue marking the par spreads, even though they trade standardised CDS using quoted spreads\n",
+      "* Your banks's risks (Deltas) are all computed with regard to par CDS"
      ]
     },
     {
@@ -817,7 +827,7 @@
       }
      },
      "source": [
-      "From your bank's system point of view (contrary to everyone else in the market): \n",
+      "From your bank's system point of view (contrary to the market): \n",
       "\n",
       "* the par CDS is still the benchmark instruments\n",
       "* the standardised CDS are the bespoke instruments you now have to hedge your positions with\n",
@@ -837,8 +847,9 @@
       "\n",
       "the equivalent par CDS spreads ($\\bs p$) and quoted spreads ($\\bs q$) are shown below.\n",
       "* the conversion btw par spreads $\\bs p$ and quoted spreads $\\bs q$ is easy\n",
-      "* curves built from converted $\\bs q$ and $\\bs p$ are identical\n",
-      "  * $\\bs q \\rightarrow$ CDS curve $\\rightarrow \\bs p \\rightarrow$ CDS Curve"
+      "  * $\\bs q \\rightarrow$ CDS curve $\\rightarrow \\bs p \\rightarrow$ CDS Curve\n",
+      "  * the last step is done by the end of day official IT system\n",
+      "* CDS curves built from converted $\\bs q$ and $\\bs p$ are identical\n"
      ]
     },
     {
@@ -925,6 +936,17 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "where do the par spread and quoted spread diverge?"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -1119,7 +1141,9 @@
       }
      },
      "source": [
-      "The root cause is that the $\\frac{\\partial \\bs b}{\\partial \\bs p}$ is not a diagonal matrix when $\\bs p$ is the par CDS spread, this incorrect procedure ignores all off diagonal elements."
+      "The root cause is that the $\\frac{\\partial \\bs b}{\\partial \\bs p}$ is not a diagonal matrix\n",
+      "* $\\bs p$ is quotes for par CDS instruments, it is not one to one with $\\bs b$, the standardised CDS\n",
+      "* this incorrect procedure ignores all off diagonal elements in $\\frac{\\partial \\bs b}{\\partial \\bs p}$ "
      ]
     },
     {
@@ -1555,7 +1579,19 @@
       "\n",
       "* simply a change of variables in multi-variate calculus\n",
       "* the right hand side can be computed without upgrading the system\n",
-      "\n",
+      "  * most of the work is in the first factor, as we have many trades in the portfolio.\n",
+      "  * the last 2 factors are trivial"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Be inclusive\n",
       "\n",
       "It is important to include all risk factors in the Jacobian matrix\n",
       "\n",
