--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1ddc4f4b251a0289afe59d1a5b306e9ba87829675022ff8134c68597f472912a"
+  "signature": "sha256:3a603c2321e58bab2183ec5d86001eb0333ab0db09c0be5a36d9cfcf17d1e494"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1591,7 +1591,7 @@
       }
      },
      "source": [
-      "## Be inclusive\n",
+      "## Be all inclusive\n",
       "\n",
       "It is important to include all risk factors in the Jacobian matrix\n",
       "\n",
@@ -1828,8 +1828,8 @@
       }
      },
      "source": [
-      "* Yes, just zero out the PVs for the first few PCs of the changes.\n",
-      "* People actually do this in practice, but is it optimal?"
+      "* Yes, just zero out the PVs for the first few PCs of the covariance of changes.\n",
+      "* People actually do this in practice"
      ]
     },
     {
@@ -1884,9 +1884,7 @@
       "\n",
       "The Ridge version is:\n",
       "\n",
-      "$$\\bs h = (JVJ^T + \\lambda W^T W)^{-1} J V \\bs d $$\n",
-      "\n",
-      "* can be very useful in practice"
+      "$$\\bs h = (JVJ^T + \\lambda W^T W)^{-1} J V \\bs d $$"
      ]
     },
     {
@@ -1904,7 +1902,7 @@
       "* Suppose only the ZCB and 5Y CDS are cost effective to trade\n",
       "  * not an uncommon situation in the credit market\n",
       "* Our bank's system only computes risks to par CDS spreads, but the hedging instruments are the standardised CDS\n",
-      "* The bespoke trade is $10MM notional, 4.5Y maturity and 500bps coupon.\n",
+      "* The bespoke trade is long $10MM, 4.5Y and 500bps\n",
       "\n",
       "The Jacobian $J = \\frac{\\partial \\bs u}{\\partial \\bs q}$ is:"
      ]
