--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:0853908553573bc3a5c1abb133003569a96c9508fea57b217676b98b1afa079c"
+  "signature": "sha256:63c0f6f8cbf006a4a01a48b8e978721f2f749008f2f83d91d13c3c1016af7562"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -406,7 +406,7 @@
       "## Benchmark Jacobian\n",
       "\n",
       "$\\frac{\\partial \\bs b}{\\partial \\bs q}$ is the Jacobian of benchmark instruments over benchmark quotes\n",
-      "* the diagonal elements of $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the PV01s\n",
+      "\n",
       "\n",
       "In this example, the benchmark instrument $\\bs b$ includes:\n",
       "\n",
@@ -433,7 +433,8 @@
       "  * the relationship of $\\bs b$ and $\\bs q$ is one to one\n",
       "    * benchmark quotes are created to convey benchmark prices\n",
       "  * Jacobian $\\frac{\\partial v}{\\partial \\bs q}$ requires other elements of $\\bs q$ remain constant when perturbing one of them\n",
-      "    * this also holds other benchmark PV constant"
+      "    * this holds other benchmark PVs constant\n",
+      "  * the diagonal elements of $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the PV01s"
      ]
     },
     {
@@ -809,7 +810,8 @@
       "| after | standardised CDS with 100/500 cpn | quoted spreads, upfront | $PV \\ne 0$, <br> cash exchange | central clearing |\n",
       "\n",
       "At its core, it is simply a change in the liquid benchmark instruments.\n",
-      "* the quoting convention change is a side product"
+      "* the quoting convention change is a side product\n",
+      "* ISDA publishes a one-day-lagged IR curve for the conversion of quoted spreads to PV, to ensure that the quoted spreads and standardised CDS PV has one-to-one dependency"
      ]
     },
     {
