--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:63c0f6f8cbf006a4a01a48b8e978721f2f749008f2f83d91d13c3c1016af7562"
+  "signature": "sha256:6ab9d02e2690307e72b3918d52195793e9b97261e1d49468c4124dd093111989"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -811,7 +811,7 @@
       "\n",
       "At its core, it is simply a change in the liquid benchmark instruments.\n",
       "* the quoting convention change is a side product\n",
-      "* ISDA publishes a one-day-lagged IR curve for the conversion of quoted spreads to PV, to ensure that the quoted spreads and standardised CDS PV has one-to-one dependency"
+      "* ISDA publishes a one-day-lagged IR curve for the conversion of quoted spreads to PV, to ensure that the standardised CDS PV is solely determined by the corresponding quoted spread."
      ]
     },
     {
