--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:6ab9d02e2690307e72b3918d52195793e9b97261e1d49468c4124dd093111989"
+  "signature": "sha256:264f99974226b7a1ef288c88262409299faa216a21f8f29e0e9ff54f1c3fedeb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -429,11 +429,15 @@
      "source": [
       "## Diagonality\n",
       "\n",
-      "The benchmark Jacobian is diagonal by consruction: \n",
-      "  * the relationship of $\\bs b$ and $\\bs q$ is one to one\n",
-      "    * benchmark quotes are created to convey benchmark prices\n",
+      "The benchmark Jacobian is diagonal if the relationship btw $\\bs b$ and $\\bs q$ is one to one\n",
       "  * Jacobian $\\frac{\\partial v}{\\partial \\bs q}$ requires other elements of $\\bs q$ remain constant when perturbing one of them\n",
-      "    * this holds other benchmark PVs constant\n",
+      "  * other benchmark PVs remain unchanged because their $\\bs q$ are hold constant\n",
+      "  \n",
+      "The $\\bs b$ and $\\bs q$ are not always one-to-one\n",
+      "  * eg, option price depends on both IR and implied vol\n",
+      "  * the benchmark quote is not diagonal in this calse\n",
+      "    \n",
+      "The benchmark Jacobian is diagonal in our example\n",
       "  * the diagonal elements of $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the PV01s"
      ]
     },
@@ -447,8 +451,7 @@
      "source": [
       "When computing benchmark Jacobian numerically, we **must** re-bootstrap all dependent curves for any perturbations:\n",
       "  * e.g., the CDS curve needs to be re-bootstrapped to reprice all benchmark instruments, even if we perturb IR\n",
-      "  * survival probability may change, but PVs are kept the same for unperturbed tenors\n",
-      "  * beware of the errors in curve building"
+      "  * survival probability may change, but PVs are kept the same for unperturbed tenors"
      ]
     },
     {
