--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:264f99974226b7a1ef288c88262409299faa216a21f8f29e0e9ff54f1c3fedeb"
+  "signature": "sha256:aa0e53b5fa8879ac88cffd80aac4c3bbeffe5a4b957952ba33eff7f3dbfada9f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1329,7 +1329,7 @@
       }
      },
      "source": [
-      "For comparison, we also the full Jacobian matrix of stardardised CDS to quoted spreads $\\frac{\\partial \\bs b}{\\partial \\bs q}$, showing that it is indeed diagonal (by construction):"
+      "For comparison, we also the full Jacobian matrix of stardardised CDS to quoted spreads $\\frac{\\partial \\bs b}{\\partial \\bs q}$, showing that it is indeed diagonal, so we can take the PV01 short cut."
      ]
     },
     {
