--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:aa0e53b5fa8879ac88cffd80aac4c3bbeffe5a4b957952ba33eff7f3dbfada9f"
+  "signature": "sha256:9807b81d2c3a8614a6496fc49502e98912e19cac13ebf85e9a685bd43386fe58"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -429,7 +429,7 @@
      "source": [
       "## Diagonality\n",
       "\n",
-      "The benchmark Jacobian is diagonal if the relationship btw $\\bs b$ and $\\bs q$ is one to one\n",
+      "The benchmark Jacobian is diagonal if the dependency btw $\\bs b$ and $\\bs q$ is one to one\n",
       "  * Jacobian $\\frac{\\partial v}{\\partial \\bs q}$ requires other elements of $\\bs q$ remain constant when perturbing one of them\n",
       "  * other benchmark PVs remain unchanged because their $\\bs q$ are hold constant\n",
       "  \n",
