--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:9807b81d2c3a8614a6496fc49502e98912e19cac13ebf85e9a685bd43386fe58"
+  "signature": "sha256:55343faf0512c343364acf6c8626e4072c9ca6dacbd7f4016a32d8bfc17ccbd9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -435,7 +435,7 @@
       "  \n",
       "The $\\bs b$ and $\\bs q$ are not always one-to-one\n",
       "  * eg, option price depends on both IR and implied vol\n",
-      "  * the benchmark quote is not diagonal in this calse\n",
+      "  * the benchmark quote is not diagonal in this case\n",
       "    \n",
       "The benchmark Jacobian is diagonal in our example\n",
       "  * the diagonal elements of $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the PV01s"
@@ -1919,7 +1919,7 @@
       "* Our bank's system only computes risks to par CDS spreads, but the hedging instruments are the standardised CDS\n",
       "* The bespoke trade is long $10MM, 4.5Y and 500bps\n",
       "\n",
-      "The Jacobian $J = \\frac{\\partial \\bs u}{\\partial \\bs q}$ is:"
+      "The Jacobian $J = \\frac{\\partial \\bs u}{\\partial \\bs p}$ is:"
      ]
     },
     {
