--- a/Homework5.ipynb
+++ b/Homework5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4f511af0354979191a5376fb27d7b71aa3cbebef1bc7158d4fa1984456b49979"
+  "signature": "sha256:91811935c664c97eb3625615d390c85cfc4ed1b24913ae85e1b45c1699990718"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -157,7 +157,7 @@
       "Following what you have done from the first problem, take the zero rates as fundamental risk factors in the market, and the aged bespoke swap:\n",
       "\n",
       "1. suppose only 1Y, 5Y and 10Y IR swaps are liquid, devise the best hedging portfolio for the aged swap that minimizes the L-2 norm of the risks.\n",
-      "2. repeat 5, but minimize the variance of the hedged portfolio instead, you can estimate the covariance matrix from the historical data.\n",
+      "2. repeat step 1, but minimize the variance of the hedged portfolio instead, you can estimate the covariance matrix from the historical data.\n",
       "\n",
       "Show the effectiveness of your hedging portfolio.\n",
       "\n",
