--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:bd4371122902242d83bb5d35be6b7b054226f6c932bf99da62e86a0f54591944"
+  "signature": "sha256:a5290c015f4b58d8b0304823ec52174f839bef781cfa58d51a769b94783b01b0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -474,7 +474,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* it is prudent to monitor the error of MC error (most people don't)"
+      "* it is prudent to monitor the error of MC error (most people don't)\n",
+      "* the err of MC err is more pronounced for fat tailed distributions, with large $\\beta$"
      ]
     },
     {
@@ -541,7 +542,7 @@
       "\n",
       "Batching is a generic method to estimate MC errors with dependent samples\n",
       "* Repeat the MC simulation $b$ times, and obtain $\\hat{\\mu}_i$ for $i = 1 ... b$ \n",
-      "  * each batch has **different** random seeds, everything else equal \n",
+      "  * each batch has **different** random seeds, *ceteris paribus*\n",
       "* $\\hat{\\mu}_i$ are indepent between batches, \n",
       "  * the variance of $\\hat \\mu$ can be estimated directly  $\\hat s_b^2 = \\frac{1}{b-1} \\sum_i (\\mu_i^2 - \\bar{\\mu})^2$ \n",
       "  * $\\bar{\\mu} = \\frac{1}{b} \\sum_i\\hat{\\mu}_i$ is the batch mean estimator, its error is $\\frac{\\hat s_b}{\\sqrt{b}}$"
@@ -665,7 +666,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Monte carlo is effective in combating high dimensions:\n",
+      "Monte Carlo is effective in combating high dimensions:\n",
       "\n",
       "* the same set of random samples cover all dimensions equally"
      ]
@@ -837,7 +838,7 @@
      "source": [
       "## Box-muller\n",
       "\n",
-      "Normal random number is the most important among all:\n",
+      "Normal random number is the most important of all:\n",
       "* most quant Finance models are driven by Brownian motions\n",
       "* fast and accurate inversion of normal CDF weren't known till recently\n",
       "\n",
@@ -2184,7 +2185,8 @@
         "<matplotlib.figure.Figure at 0x10c68c88>"
        ]
       }
-     ]
+     ],
+     "prompt_number": 129
     },
     {
      "cell_type": "markdown",
@@ -2238,7 +2240,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 130
     },
     {
      "cell_type": "code",
@@ -2261,7 +2264,99 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Batch 1</th>\n",
+        "      <th>Batch 2</th>\n",
+        "      <th>Batch 3</th>\n",
+        "      <th>Batch 4</th>\n",
+        "      <th>Batch 5</th>\n",
+        "      <th>Batch 6</th>\n",
+        "      <th>Batch 7</th>\n",
+        "      <th>Batch 8</th>\n",
+        "      <th>Batch 9</th>\n",
+        "      <th>Batch 10</th>\n",
+        "      <th>Batch Mean</th>\n",
+        "      <th>Batch Std</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>LSMC - LB</th>\n",
+        "      <td>6.486</td>\n",
+        "      <td>6.514</td>\n",
+        "      <td>6.473</td>\n",
+        "      <td>6.516</td>\n",
+        "      <td>6.507</td>\n",
+        "      <td>6.543</td>\n",
+        "      <td>6.493</td>\n",
+        "      <td>6.499</td>\n",
+        "      <td>6.496</td>\n",
+        "      <td>6.503</td>\n",
+        "      <td>6.503</td>\n",
+        "      <td>0.018</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LSMC</th>\n",
+        "      <td>6.526</td>\n",
+        "      <td>6.490</td>\n",
+        "      <td>6.528</td>\n",
+        "      <td>6.519</td>\n",
+        "      <td>6.552</td>\n",
+        "      <td>6.504</td>\n",
+        "      <td>6.509</td>\n",
+        "      <td>6.509</td>\n",
+        "      <td>6.518</td>\n",
+        "      <td>6.522</td>\n",
+        "      <td>6.518</td>\n",
+        "      <td>0.016</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LSMC - UB</th>\n",
+        "      <td>6.569</td>\n",
+        "      <td>6.531</td>\n",
+        "      <td>6.568</td>\n",
+        "      <td>6.561</td>\n",
+        "      <td>6.600</td>\n",
+        "      <td>6.545</td>\n",
+        "      <td>6.554</td>\n",
+        "      <td>6.552</td>\n",
+        "      <td>6.561</td>\n",
+        "      <td>6.566</td>\n",
+        "      <td>6.561</td>\n",
+        "      <td>0.017</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LSMC err </th>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.012</td>\n",
+        "      <td>0.000</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table></font></center>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.HTML at 0x1091c9e8>"
+       ]
+      }
+     ],
+     "prompt_number": 131
     },
     {
      "cell_type": "markdown",
