--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:b4a672021f7c699a47dad4c22ce9347aba41a3233a33c0c3f69b966e6f41421d"
+  "signature": "sha256:90e2f68de4e815a305046ef02a56d542396046f933aec6a47b0266928f489ff0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -578,10 +578,10 @@
       "\n",
       "| Dimension | Simpson Integration Points | Equivalent MC samples | Cost Ratio (MC/Simpson) |\n",
       "| :----: | :----: | :----: | :----: | :----: |\n",
-      "| 1 | $100$ | $100^{3.5} = 10^7$ | $10^5$ |\n",
-      "| 2 | $100^2$ | $10^7$ | $1000$ |\n",
-      "| 4 | $100^4$ | $10^7$ | $0.1$ |\n",
-      "| 10 | $100^{10}$ | $10^7$ | $10^{-13}$ |"
+      "| 1 | $100$ | $10^{16} $ | $10^{14}$ |\n",
+      "| 5 | $100^5$ | $10^{16}$ | $10^6$ |\n",
+      "| 10 | $100^{10}$ | $10^{16}$ | $0.001$ |\n",
+      "| 20 | $100^{20}$ | $10^{16}$ | $10^{-34}$ |"
      ]
     },
     {
@@ -951,7 +951,7 @@
       "* is the accuracy in the distribution of $s(t)$ at a specific $t$:\n",
       "* a discretization has n-th order weak convergence if\n",
       "\n",
-      "$$\\mathbb{E}[f(s(t)) - f(\\hat s(t; \\delta))] = O(\\delta^n)$$\n",
+      "$$\\mathbb{E}[s(t) - \\hat s(t; \\delta)] = O(\\delta^n)$$\n",
       "\n",
       "####Strong convergence:\n",
       "\n",
