--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:f4abc84fe33d72b7bf481607e5df8c5a9d17daccc03ebd387df534e9ab0b2c4a"
+  "signature": "sha256:0110c7a50d6b18e799d0c31b25cd1f86b094af70834d1097605c15bab8e0c236"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,8 @@
      "input": [
       "%pylab inline\n",
       "\n",
-      "import pandas as pd"
+      "import pandas as pd\n",
+      "import fmt"
      ],
      "language": "python",
      "metadata": {
@@ -40,7 +41,7 @@
        ]
       }
      ],
-     "prompt_number": 107
+     "prompt_number": 139
     },
     {
      "cell_type": "markdown",
