--- a/Homework6.ipynb
+++ b/Homework6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b1fd999d7d84447fcb2d140633b42a73a3ef082454dbadb57fceb20236eb4a62"
+  "signature": "sha256:dc9989fbff47b8c27c1315f0fe980c0478cb6fdf5bbd4d42ac30372586ae2fcc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -133,12 +133,12 @@
       "\n",
       "with: $\\kappa = 0.1, \\bar{r} = 0.03, \\sigma = 0.05, r(0) = 0.01$\n",
       "\n",
-      "It was taught in many text book that when sampling the above CIR process, one way to avoid the negative value is to flip the sign of the random normal random number if it would lead to negative $r$ values in the next simulation step. This makes the $r=0$ a reflective boundary.\n",
+      "It was taught in many text book that when sampling the above CIR process, one way to avoid the negative value is to flip the sign of the random normal random number if it would lead to negative $r$ values in the next simulation step. This makes the $r(t)=0$ a reflective boundary.\n",
       "\n",
-      "1. what is the expected value of $r_t$, you can cite a reference to answer this question, but it is useful for you to understand how it was derived.\n",
-      "2. implement the Euler discretizaitaon with the reflective boundary, run the simulation with reflective boundary at different time steps up to t=10Y, and plot the bias against time step sizes.\n",
+      "1. what is the analytical expression of  $\\mathbb E [r(t)]$, you can cite a reference to answer this question, but it is useful for you to understand how it was derived (no need to write it in your answers).\n",
+      "2. implement the Euler discretizaitaon with the reflective boundary, run the simulation to compute the average of $r(10Y)$ with reflective boundary using different time sample step sizes, and plot the bias at 10Y as a function of the time sample step sizes.\n",
       "3. repeat 2, but using the log Euler sampling and comment on your results\n",
-      "4. draw a few paths from both methods and show that they are indeed path-wise equivalent for paths that do not hit zero; also show a few paths that have different behaviours near 0. "
+      "4. draw a few paths from both methods using the same set random numbers and show that they are indeed path-wise equivalent for paths that do not hit zero (path wise equivalence guaranteed by Ito's lemma); also show a few paths that have different behaviours near $r(t) = 0$. "
      ]
     },
     {
