corrected typo, credit to zhongrun zhu

--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:41f1aafa5a83a11adfb1763f862471732f3fc3e661bcac0e520dd97392c5d6f1"
+  "signature": "sha256:0995ee96ff67bcc4b3562112a150ff624128281ca6462217fb7748391af730f9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1125,7 +1125,7 @@
       "$$\\small \\begin{array}\n",
       "\\\\ dx(t) &= \\kappa(\\bar x - x(t)) dt + \\sigma dw(t) \\\\\n",
       "x(t_{i+1}) &= x(t_i) + \\kappa(\\bar x - x(t_i)) \\delta + \\sqrt{\\delta} \\sigma \\epsilon_i \\\\\n",
-      "&= (1 - \\kappa \\delta) x(t_i) + \\kappa \\bar x \\delta + \\sqrt{\\delta t} \\sigma \\epsilon_i \\\\\n",
+      "&= (1 - \\kappa \\delta) x(t_i) + \\kappa \\bar x \\delta + \\sqrt{\\delta} \\sigma \\epsilon_i \\\\\n",
       "\\mathbb{E}[x(t_{i+1})] &= (1 - \\kappa \\delta) \\mathbb{E}[x(t_i)] + \\kappa \\bar x \\delta\n",
       "\\end{array}$$\n",
       "\n",
