--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:3783f48ee871baf9fe3af1333313bdd9af762a08edc4da47b463ba544e7dc73d"
+  "signature": "sha256:bd09954889792fcfb2497b13ee253a55d9f55bd1f91609fb9278e1fc03dc34e5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1331,7 +1331,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* a shift of $\\tilde m$ around -1.5 gives the most variance reduction"
+      "* a shift of $\\tilde m$ around -1.5 gives the most variance reduction\n",
+      "* here we followed the convesion that negative $\\tilde m$ means to more defaults"
      ]
     },
     {
