--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:bd09954889792fcfb2497b13ee253a55d9f55bd1f91609fb9278e1fc03dc34e5"
+  "signature": "sha256:095f075c190d113caffa30c74c01244067be4632b50fae24bfaf5bef2929f7f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -270,7 +270,7 @@
       "$$ \\tilde y = \\tilde x + \\beta (v - \\tilde v) $$\n",
       "\n",
       "* $\\tilde v$ is the control variate, which represents the similar vanilla instrument\n",
-      "* $v = \\mathbb{E}[\\tilde v]$ is the true value of the vanilla instrument, which is known to very high precision (preferrably analytical)\n",
+      "* $v = \\mathbb{E}[\\tilde v]$ is the true value of the vanilla instrument, which is known to very high precision (e.g. analytical or PDE)\n",
       "* $\\beta$ is a scalar constant, a free parameter\n",
       "* $\\mathbb{E}[\\tilde y] = \\mathbb{E}[\\tilde x]$ by construction"
      ]
@@ -567,7 +567,7 @@
       }
      },
      "source": [
-      "Disclaimer: such dramatic reduction in variance is not typical in pratice.\n",
+      "Disclaimer: such dramatic reduction in variance is not typical:\n",
       "* 10x - 20x reduction is an exellent result in practice"
      ]
     },
@@ -1579,7 +1579,7 @@
       "$$ \\small \\mathbb E^{\\mathbb Q}[x(s)] = \\mathbb E^{\\mathbb P}[x(s) m(s)]  =\\mathbb E^{\\mathbb P}[x(s) \\mathbb E^{\\mathbb P}[m(t) | \\mathcal{F}_s]]  = \\mathbb E^{\\mathbb P}[x(s) m(t)] $$\n",
       "\n",
       "therefore under $\\mathbb Q$ defined by $\\frac{d \\mathbb Q}{d \\mathbb P} = m(t)$:\n",
-      "* $\\frac{x(s)}{\\sqrt s} = \\frac{w^{\\mathbb Q}(s) + \\theta s}{\\sqrt s} = \\frac{w^{\\mathbb Q}(s)}{\\sqrt s} + \\theta \\sqrt s$ is standard normal for any $s < t$"
+      "* $\\frac{x(s)}{\\sqrt s} = \\frac{1}{\\sqrt s}(w^{\\mathbb Q}(s) + \\theta s)$ is standard normal for any $s < t$"
      ]
     },
     {
