error correction, credit to xin zhang

--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:095f075c190d113caffa30c74c01244067be4632b50fae24bfaf5bef2929f7f7"
+  "signature": "sha256:1821e13c1ddd52cc3b706bc8a003fec45260d32515ae4e4cb910939df22acb91"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1579,7 +1579,7 @@
       "$$ \\small \\mathbb E^{\\mathbb Q}[x(s)] = \\mathbb E^{\\mathbb P}[x(s) m(s)]  =\\mathbb E^{\\mathbb P}[x(s) \\mathbb E^{\\mathbb P}[m(t) | \\mathcal{F}_s]]  = \\mathbb E^{\\mathbb P}[x(s) m(t)] $$\n",
       "\n",
       "therefore under $\\mathbb Q$ defined by $\\frac{d \\mathbb Q}{d \\mathbb P} = m(t)$:\n",
-      "* $\\frac{x(s)}{\\sqrt s} = \\frac{1}{\\sqrt s}(w^{\\mathbb Q}(s) + \\theta s)$ is standard normal for any $s < t$"
+      "* $\\frac{x(s)}{\\sqrt s} = \\frac{1}{\\sqrt s}(w^{\\mathbb P}(s) + \\theta s)$ is standard normal for any $s < t$"
      ]
     },
     {
