--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:6f323fc6fc34005027b3ffc0f61e5b11244f75edeb346cb2d9f43e53f3d14559"
+  "signature": "sha256:ec7b5d82b802cb7dc03c53f55d0c73f02f4f386578534ab7d98f6af9134494ca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -371,7 +371,7 @@
      "source": [
       "## Advice for the real world:\n",
       "\n",
-      "by Paul Phillips: \"We're doing it all wrong\":"
+      "by Paul Phillips (quoting George Orwell): \"We're doing it all wrong\":"
      ]
     },
     {
